--- a/freelancer_inicio/css/styles.css
+++ b/freelancer_inicio/css/styles.css
@@ -13,6 +13,8 @@ html{
 
 body {
     font-size: 16px;
+    font-family: 'Krub', sans-serif;
+    
 }
 .titulo {
     text-align: center;
@@ -21,4 +23,22 @@ body {
 }
 .titulo span {
     font-size: 2rem;
+}
+
+.contenedor{
+    width: 120rem;
+    margin: 0 auto 0 auto;
+}
+
+.nav-bg {
+    background-color: var(--secundario);
+}
+
+.navegacion-principal {
+    padding: 1rem 1rem 1rem 1rem;
+}
+
+.navegacion-principal a {
+    color: var(--blanco);
+    text-decoration: none;
 }
