--- a/freelancer_inicio/css/styles.css
+++ b/freelancer_inicio/css/styles.css
@@ -7,28 +7,79 @@
     
 }
 
+/* Globales */
+
 html{
     font-size: 62.5%;
+    box-sizing: border-box; /* Hack para Box Model */
 }
+*, *:before, *:after {
+    box-sizing: inherit;
+} 
+
 
 body {
-    font-size: 16px;
+    font-size: 16px; /* 1rem = 10px */
     font-family: 'Krub', sans-serif;
-    
 }
-.titulo {
+
+
+.contenedor{
+    max-width: 120rem;
+    margin: 0 auto 0 auto;
+}
+
+.boton {
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem 1rem 3rem;
+    margin-top: 3rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: .5rem;
+    width: 80%;
+    text-align: center;  
+}
+
+@media (min-width: 768px) {
+    .boton{
+        width: auto;
+        
+    }
+}
+
+/* Tipografia */
+
+h1 {
+    font-size: 3.8rem    
+}
+
+h2 {
+    font-size: 2.8rem
+}
+
+h3 {
+    font-size: 1.8rem
+}
+
+h1,h2,h3 {
     text-align: center;
-    font-size: 3.8rem;
-    color: var(--primario);
 }
+
+.titulo h2 {
+    color: var(--blanco);
+} 
+
+/* Titulos */
+
 .titulo span {
     font-size: 2rem;
 }
 
-.contenedor{
-    width: 120rem;
-    margin: 0 auto 0 auto;
-}
+
+/* Navegacion Principal */
 
 .nav-bg {
     background-color: var(--secundario);
@@ -36,8 +87,15 @@ body {
 
 .navegacion-principal {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width: 768px) {
+    .navegacion-principal {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
 }
 
 .navegacion-principal a {
@@ -53,16 +111,30 @@ body {
     color: var(--oscuro);
 }
 
-@media (min-width: 480px) {
-    h1 {
+/* Hero */
 
-    }
+.hero {
+    background-image: url(../img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 450px;
+    position: relative;
 }
 
-@media (min-width: 768) {
-    h1 {
+.contenido-hero {
+    position: absolute;
+    background-color: rgb( 0 0 0 / 70%);
+    width: 100%;
+    height: 100%;
 
-    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contenido-hero h2, .contenido-hero p {
+    color: var(--blanco);
 }
 
 
