--- a/freelancer_inicio/css/styles.css
+++ b/freelancer_inicio/css/styles.css
@@ -13,7 +13,17 @@
 html{
     font-size: 62.5%;
     box-sizing: border-box; /* Hack para Box Model */
+    scroll-snap-type: y mandatory;
 }
+
+/* Scroll Snap */
+
+.servicios, .navegacion-principal, .formulario {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+}
+
+
 *, *:before, *:after {
     box-sizing: inherit;
 } 
@@ -43,6 +53,7 @@ body {
     border-radius: .5rem;
     width: 80%;
     text-align: center;  
+    border: none;
 }
 
 @media (min-width: 768px) {
@@ -50,6 +61,10 @@ body {
         width: auto;
         
     }
+}
+
+.boton:hover {
+    cursor: pointer;
 }
 
 .sombra {
@@ -87,6 +102,25 @@ h1,h2,h3 {
 
 .titulo span {
     font-size: 2rem;
+}
+
+/* Utilidades */
+.w-sm-100 {
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .w-sm-100 {
+        width: auto;
+    }
+}
+
+.flex {
+    display: flex;
+}
+
+.alinear-derecha {
+    justify-content: flex-end;
 }
 
 
@@ -149,6 +183,9 @@ h1,h2,h3 {
     color: var(--blanco);
 }
 
+
+
+
 /* Servicios */
 
 @media (min-width: 768px) {
@@ -186,4 +223,75 @@ h1,h2,h3 {
     justify-content: space-evenly;
     align-items: center;
 }
+
+/* Contacto */
+
+.formulario {
+    background-color: var(--gris);
+    width: min(60rem, 100%); /* Utilizar el valor mas pequeño */
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+.formulario fieldset {
+    border: none;
+}
+
+.formulario legend {
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario);
+}
+
+
+
+@media (min-width: 768px) {
+    .contenedor-campos {
+        display: grid;
+        grid-template-columns: repeat(2, 50%);
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
+
+    .campo:nth-child(3), .campo:nth-child(4) {
+        grid-column: 1/3;
+    }
+}
+
+.campo {
+    margin-bottom: 1rem;
+}
+
+.campo label {
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+
+.campo textarea {
+    height: 20rem;
+}
+
+.input-text {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+
+
+
+/* Footer */
+
+.footer {
+    text-align: center;
+}
+
+
 
