--- a/blogdecafe_inicio/css/style.css
+++ b/blogdecafe_inicio/css/style.css
@@ -29,8 +29,7 @@ body {
 /* Globales */
 
 .contenedor {
-    max-width: 120rem;
-    width: 90%;
+    width: min(90%,120rem);
     margin: 0 auto;
 }
 
@@ -40,6 +39,7 @@ a {
 
 h1,h2,h3,h4 {
     font-family: var(--fuenteHeading);
+    line-height: 1.2;
 }
 
 h1 {
@@ -54,7 +54,7 @@ h3 {
     font-size: 3.2rem;
 }
 
-h3 {
+h4 {
     font-size: 2.8rem;
 }
 
@@ -74,6 +74,7 @@ img {
 
 .centrar-texto {
     text-align: center;
+
 }
 
 /* Header */
@@ -94,8 +95,11 @@ img {
 
 @media (min-width: 768px) {
     .header__texto {
-        margin-top: 20rem;
+        margin-top: 15rem;
     }
+}
+.barra {
+    padding-top: 4rem;
 }
 
 
@@ -144,6 +148,135 @@ img {
 
 
 .entrada {
-    border-bottom: 1rem solid var(--gris);
+    border-bottom: 1px solid var(--gris);
     margin-bottom: 2rem;
+}
+
+.entrada:last-of-type {
+    border: none;
+    margin-bottom: 0;
+}
+
+.boton {
+    display: block;
+    font-family: var(--fuenteHeading);
+    color: var(--blanco);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .boton {
+        display: inline-block;
+    }
+}
+
+.boton--primario {
+    background-color: var(--negro);
+}
+
+.boton--secundario {
+    background-color: var(--primario);
+}
+
+.cursos {
+    list-style: none;
+}
+
+.widget-curso {
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+
+.widget-curso:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+
+.widget-curso__label {
+    font-family: var(--fuenteHeading);
+    font-weight: 700;
+}
+
+.widget-curso__info {
+    font-weight: 400;
+}
+
+.widget-curso__label,
+.widget-curso__info {
+    font-size: 2rem;
+}
+
+.footer {
+    background-color: var(--negro);
+    padding-bottom: 3rem;
+    margin-top: 4rem;
+}
+
+/* Sobre Nosotros */
+
+@media (min-width: 768px) {
+    /*
+    !!!LO MISMO QUE ABAJO PERO CON FLEX EN VEZ DE GRID!!!
+    .sobre-nosotros {
+        display: flex;
+        column-gap: 2rem;
+    }
+    .sobre-nosotros__imagen,
+    .sobre-nosotros__texto {
+        flex-basis: 50%;
+    }
+    */
+
+    .sobre-nosotros {
+        display: grid;
+        grid-template-columns: repeat(2, 50%);
+        column-gap: 2rem;
+    }
+}
+
+/* Cursos */
+
+.curso {
+    padding: 3rem 0;
+    border-bottom: 1px solid var(--gris);
+}
+
+@media (min-width: 768px) {
+    .curso{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 2rem;
+    }
+}
+
+.curso:last-of-type{
+    border: none;
+}
+
+.curso__label {
+    font-family: var(--fuenteHeading);
+    font-weight: 700;
+}
+
+.curso__info {
+    font-weight: 400;
+}
+
+.curso__label,
+.curso__info {
+    font-size: 2rem;
+}
+
+/* Contacto */
+
+.contacto-bg {
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
