--- a/blogdecafe_inicio/css/style.css
+++ b/blogdecafe_inicio/css/style.css
@@ -167,12 +167,17 @@ img {
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 2rem;
+    border: none;
 }
 
 @media (min-width: 768px) {
     .boton {
         display: inline-block;
     }
+}
+
+.boton:hover{
+    cursor: pointer;
 }
 
 .boton--primario {
@@ -289,17 +294,21 @@ img {
 }
 
 .campo {
-
+    display: flex;
+    margin-bottom: 2rem;
 }
 
 .campo__label {
-
+    flex: 0 0 9rem;
+    text-align: right;
+    margin-right: 2rem;
 }
 
 .campo__field{
-
+    flex: 1;
+    border: 1px solid var(--gris);
 }
 
 .campo__field--textarea{
-
+    height: 20rem;
 }
