--- a/Paginas/FestivalMusica_inicio/src/scss/base/_globales.scss
+++ b/Paginas/FestivalMusica_inicio/src/scss/base/_globales.scss
@@ -15,6 +15,11 @@ html {
 body {
     font-family: v.$fuente_principal;
     font-size: 1.6rem;
+
+    &.fijar-body {
+        overflow: hidden;
+    }
+
 }
 
 p {
