--- a/Paginas/FestivalMusica_inicio/src/scss/base/_globales.scss
+++ b/Paginas/FestivalMusica_inicio/src/scss/base/_globales.scss
@@ -1,4 +1,5 @@
 @use "variables" as v;
+@use '../base/mixins' as m;
 
 html {
     font-size: 62.5%; // 1 rem = 10px
@@ -20,9 +21,12 @@ body {
         overflow: hidden;
     }
 
-    &.body-scroll {
-        padding-top: 8.6rem;
+    @include m.tablet {
+        &.body-scroll {
+            padding-top: 8.6rem;
+        }
     }
+
 }
 
 p {
