terminando varios apartados

--- a/Paginas/bienesraices_inicio/src/scss/base/_mixins.scss
+++ b/Paginas/bienesraices_inicio/src/scss/base/_mixins.scss
@@ -21,3 +21,18 @@
     gap: $espaciado;
     grid-template-columns: repeat($columnas, 1fr);
 }
+
+@mixin boton($bgColor, $display ) {
+    background-color: $bgColor;
+    color: $blanco;
+    font-weight: $bold;
+    text-decoration: none;
+    padding: 1rem 3rem;
+    margin-top: calc($separacion / 2);
+    display: $display;
+    justify-content: center;
+
+   &:hover {
+    background-color: darken($bgColor, 5);
+   }
+}
