--- a/Paginas/bienesraices_inicio/src/scss/base/_mixins.scss
+++ b/Paginas/bienesraices_inicio/src/scss/base/_mixins.scss
@@ -31,8 +31,10 @@
     margin-top: calc($separacion / 2);
     display: $display;
     justify-content: center;
+    border: none;
 
    &:hover {
     background-color: darken($bgColor, 5);
+    cursor: pointer;
    }
 }
