--- a/Paginas/bienesraices_inicio/src/scss/layout/_inferior.scss
+++ b/Paginas/bienesraices_inicio/src/scss/layout/_inferior.scss
@@ -21,6 +21,14 @@
 
 }
 
+
+.informacion-meta {
+    
+    span {
+        color: $amarillo;
+    }
+}
+
 .texto-entrada {
     a {
         color: $negro;
@@ -45,7 +53,5 @@
         }
     }
 
-    span {
-        color: $amarillo;
-    }
+
 }
