--- a/Paginas/bienesraices/src/scss/base/_botones.scss
+++ b/Paginas/bienesraices/src/scss/base/_botones.scss
@@ -13,3 +13,11 @@
     @include boton($verde, inline-block);
 
 }
+
+.boton-rojo-block {
+    @include boton($rojo, flex)
+}
+
+.boton-verde-block {
+    @include boton($verde, block)
+}
