terminando el CRUD

--- a/Paginas/bienesraices/src/scss/base/_botones.scss
+++ b/Paginas/bienesraices/src/scss/base/_botones.scss
@@ -15,7 +15,8 @@
 }
 
 .boton-rojo-block {
-    @include boton($rojo, flex)
+    @include boton($rojo, flex);
+    width: 100%
 }
 
 .boton-verde-block {
