--- a/Paginas/bienesraices/src/scss/internas/_admin.scss
+++ b/Paginas/bienesraices/src/scss/internas/_admin.scss
@@ -16,6 +16,10 @@
     &.exito-amarillo {
         background-color: $amarillo;
     }
+
+    &.exito-rojo {
+        background-color: $rojo;
+    }
 }
 
 
