--- a/Paginas/bienesraices/src/scss/base/_darkMode.scss
+++ b/Paginas/bienesraices/src/scss/base/_darkMode.scss
@@ -1,5 +1,11 @@
 .dark-mode {
     background-color: darken($grisOscuro, 10);
+    
+    table {
+        tr {
+            color: $blanco;
+        }
+    }
 
     p {
         color: $blanco;
@@ -45,5 +51,6 @@
             border: 1px solid $grisOscuro;
             color: $blanco;
         }
+
     }
 }
