--- a/Paginas/AppSalon_PHP_MVC_JS_SASS/src/scss/layout/_cita.scss
+++ b/Paginas/AppSalon_PHP_MVC_JS_SASS/src/scss/layout/_cita.scss
@@ -17,3 +17,21 @@
 .ocultar {
     display: none;
 }
+
+
+.my-popup {
+    font-size: 16px; /* ajusta el tamaño del texto */
+    width: 500px; /* ajusta el ancho del cartel */
+}
+
+.my-title {
+    font-size: 24px; /* ajusta el tamaño del título */
+}
+
+.my-content {
+    font-size: 18px; /* ajusta el tamaño del texto del contenido */
+}
+
+.my-confirm-button {
+    font-size: 18px; /* ajusta el tamaño del botón */
+}
