--- a/Paginas/UpTask_MVC/src/scss/dashboard/_dashboard.scss
+++ b/Paginas/UpTask_MVC/src/scss/dashboard/_dashboard.scss
@@ -36,4 +36,10 @@
 
         }
     }
+    .enlace {
+        color: v.$indigo;
+        &:hover {
+            color: darken(v.$indigo, 20%)
+        }
+    }
 }
