--- a/Paginas/UpTask_MVC/src/scss/dashboard/_sidebar.scss
+++ b/Paginas/UpTask_MVC/src/scss/dashboard/_sidebar.scss
@@ -24,6 +24,9 @@
         }
 
     }
+    &.ocultar {
+        opacity: 0;
+    }
 
     @include m.tablet {
         height: 100%;
@@ -31,30 +34,71 @@
         padding: 2rem;
         background-color: v.$indigo;
     }
-    h2 {
-        color: v.$blanco;
-        margin: 0;
-        text-align: center;
+
+    .contenedor-sidebar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        h2 {
+            color: v.$blanco;
+            margin: 0;
+            text-align: center;
+        }
+        .cerrar-menu {
+            display: flex;
+            justify-content: center;
+            height: 2rem;
+            width: 2rem;
+            img {
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+            @include m.tablet {
+                display: none ;
+            }
+   
+        }
     }
+
     .sidebar-nav {
         margin-top: 5rem;
 
         a {
             color: v.$blanco;
             display: block;
-            margin-bottom: 1.5rem;
             padding: .7rem;
             transition-property: background-color;
             transition-duration: 300ms;
             text-transform: uppercase;
             font-weight: bold;
-            font-size: 1.2rem;
+            font-size: 2.4rem;
+            margin-bottom: 2rem;
+            text-align: center;
+            
 
             &:hover,
             &.activo {
                 background-color: darken(v.$indigo, 20%);
                 border-radius: .5rem;
             }
+
+            @include m.tablet {
+                font-size: 1.2rem;
+                margin-bottom: 1rem;
+                text-align: left;
+            }
+        }
+    }
+
+    .cerrar-sesion-mobile {
+        margin-top: 10rem;
+        .cerrar-sesion {
+            @include m.boton(v.$indigo, v.$blanco);
+        }
+
+        @include m.tablet {
+            display: none;
         }
     }
 }
