--- a/Paginas/DevWebCamp_inicio/src/scss/ui/formulario/_formulario.scss
+++ b/Paginas/DevWebCamp_inicio/src/scss/ui/formulario/_formulario.scss
@@ -4,6 +4,17 @@
 .formulario {
     display: flex;
     flex-direction: column;
+    &__fieldset {
+        border: none;
+        margin-top: 1rem;
+        padding: 0;
+    }
+
+    &__legend {
+        color: v.$gris;
+        font-size: 2.2rem;
+        margin-bottom: 2rem;
+    }
 
     &__campo {
         display: flex;
@@ -22,11 +33,19 @@
         padding: 1rem;
         border: 1px solid darken(v.$gris-claro, 20);
         border-radius: .5rem;
+
+        &--file {
+            border: none;
+        }
     }
 
     &__submit {
         @include m.boton(v.$azul, v.$blanco);
         width: auto;
         align-self: flex-start;
+
+        &--registrar {
+            width: 100%;
+        }
     }
 }
