--- a/Paginas/DevWebCamp_inicio/src/scss/admin/_paginacion.scss
+++ b/Paginas/DevWebCamp_inicio/src/scss/admin/_paginacion.scss
@@ -33,12 +33,20 @@
 
         &--numero {
             font-weight: v.$bold;
+            display: none;
+            @include m.tablet {
+                display: inline;
+            }
             
         }
 
         &--actual {
             color: v.$gris;
             font-weight: v.$bold;
+            display: none;
+            @include m.tablet {
+                display: inline;
+            }
         }
     }
 }
