--- a/Paginas/DevWebCamp_inicio/src/scss/paginas/_conferencias.scss
+++ b/Paginas/DevWebCamp_inicio/src/scss/paginas/_conferencias.scss
@@ -5,7 +5,6 @@
     padding: 5rem 0;
     @include m.contenedor;
 }
-
 .eventos {
     $modificador: &;
 
@@ -13,7 +12,7 @@
         color: v.$azul;
         margin: 5rem 0;
         text-align: left;
-        font-size: clamp(2rem, -0.8rem + 8vw ,6rem);
+        font-size: clamp(2rem, -0.8rem + 8vw, 6rem);
     }
 
     &__fecha {
@@ -26,6 +25,18 @@
         #{$modificador}__heading {
             color: v.$secundario;
         }
+        
+        .evento__informacion {
+            background-color: v.$secundario;
+            &:hover {
+                background-color: darken(v.$secundario, 10%);
+            }
+        }
+    }
+
+    .swiper-button-next,
+    .swiper-button-prev {
+        color: rgba(v.$blanco, .5);
     }
 }
 
@@ -40,10 +51,19 @@
         background-color: v.$azul;
         columns: v.$blanco;
         transition: 300ms background-color ease;
-        
+
         &:hover {
             background-color: darken(v.$azul, 10%);
         }
+    }
+
+    &__nombre{
+        font-size: 2rem;
+        margin: 0;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
     }
 
     &__introduccion {
