--- a/Paginas/DevWebCamp_inicio/src/scss/paginas/_conferencias.scss
+++ b/Paginas/DevWebCamp_inicio/src/scss/paginas/_conferencias.scss
@@ -54,6 +54,7 @@
 
         &:hover {
             background-color: darken(v.$azul, 10%);
+            
         }
     }
 
@@ -87,5 +88,15 @@
     }
     &__autor-nombre {
         font-weight: v.$bold;
+    }
+
+    &__agregar {
+        @include m.boton(v.$blanco, v.$negro);
+        margin-top: 1rem;
+
+        &:disabled {
+            opacity: .5;;
+            cursor: not-allowed;
+        }
     }
 }
