--- a/Paginas/DevWebCamp_inicio/src/scss/admin/_dashboard.scss
+++ b/Paginas/DevWebCamp_inicio/src/scss/admin/_dashboard.scss
@@ -124,4 +124,9 @@
         @extend .dashboard__contenedor;
         @include m.contenedor-md;
     }
+    
+
+    &__grafica {
+        @include m.contenedor;
+    }
 }
