--- a/Paginas/BlogPropio/src/scss/base/_variables.scss
+++ b/Paginas/BlogPropio/src/scss/base/_variables.scss
@@ -8,16 +8,15 @@ $desktop: 1024px;
 $xl_desktop: 1200px;
 
 // Colores
-$azul: #007df4;
 $secundario: #00c8c2;
 
 $grisClaro: #f1f2f5;
 $gris: #364954;
 $gris2: #717171;
 $gris3: #a8a8a8;
-$grisOscuro: #2b3b45;
-$azul: #2e85aa;
-$amarillo: #ff8e00;
+$grisOscuro: #0e1657;
+$azul: #030229;
+$amarillo: #eeff00;
 $blanco: #fff;
 $negro: #292929;
 
